--- a/log_in.html
+++ b/log_in.html
@@ -49,7 +49,7 @@
     <div class="container my-5">
       <div class="row">
         <div class="col-lg-5 col-md-6 col-sm-8 mx-auto bg-white hello">
-          <form action="index.html">
+          <form>
             <div class="my-3 mx-3">
               <br>
               <h2 class="d-flex justify-content-center"><b>log In</b></h2>
